assets/frontend/css/styles.css
/* ... */
div.block-layered-nav dl#narrow-by-list dd {
    margin-left: 20px;
}

div.block-layered-nav ul,
div.block-layered-nav ol {
    list-style-type: none;
}

/* ----------------------------- POPULAR TAGS */

ul.tags-list { 
    list-style-type:none;
}

ul.tags-list li {
    display:inline;
    margin-right:4px;
}

/* ----------------------------- POLL */

div.block-poll form div p.block-subtitle {
    margin-bottom: 10px;
}

div.block-poll form label {
    display: inline;
}

div.block-poll form ul li {
    margin:0;
}

div.block-poll ol#poll-answers {
    margin-left:18px;
}

/* ----------------------------- PAYPAL LOGO SIDEBAR */

div.sidebar div.paypal-logo {
    margin-left:20px;
}

/* ----------------------------- GLOBAL MESSAGES */

/* Global Messages  */
.messages,
.messages ul { list-style:none; margin:0; padding:0; }
.messages { width:100%; overflow:hidden; }
.messages li { margin:0 0 5px;}
.messages li li { margin:0 0 3px; }
.error-msg,
.success-msg,
.note-msg,
.notice-msg { min-height:24px; padding:8px 8px 8px 32px; }
.notice-msg { background-color:#ECEDED; color:#111;}
.error-msg { background-color:#FFF3EE; color:#b90101 }
.success-msg { background-color:#E0FCF2; color:#1A7; }

/* ----------------------------- BREADCRUMBS */

ul.breadcrumbs {
    padding: 10px 10px 0 10px;
    overflow: hidden;
    clear:both;
}

ul.breadcrumbs li {
    float: left;
    list-style-type: none;
    margin-top: 5px;
    margin-right: 6px;
}

/* ----------------------------- TITLE BUTTONS */
.title-buttons button,
.title-buttons span,
.title-buttons a {
    float: right;
    margin-top: -57px;
}

.title-buttons + p {
    clear: both;
}

.page-popup .title-buttons a {
    margin-top: -37px;
}

/* ----------------------------- PRODUCT SORTER*/

div.toolbar {
    border: 1px solid;
    -moz-border-radius: 5px;
    border-radius: 5px;
    clear: both;
    margin: 10px 0;
    overflow: hidden;
    padding: 0 10px;
}

div.toolbar ul {
    padding: 0 10px;
}

div.toolbar ul.sorter {
    border-top: 1px solid;
    clear: both;
}

div.my-account ol {
    list-style-type: none;
}

div.toolbar ul li {
    list-style-type: none;
    padding: 3px 0 1px 0;
}

div.toolbar select {
    margin-top: 4px;
}

div.toolbar ul li.amount {
    float: left;
    width: 50%;
}

div.toolbar li.limiter {
    float: right;
}

div.toolbar li.limiter label,
div.toolbar li.limiter select,
div.toolbar li.limiter em {
    float: left;
    margin-left: 5px;
}

div.toolbar li.view-mode,
div.toolbar li.pagination {
    float: left;
    width: 33.33%;
}

div.my-account li.pagination strong,
div.toolbar li.pagination strong {
    float: left;
}

div.toolbar ul li label {
    display: inline;
}

div.my-account li.pagination {
    width: 100px;
}

div.my-account li.pagination ol li,
div.toolbar li.pagination ol li {
    float: left;
    list-style-type: none;
    padding: 0;
}

div.my-account li.pagination ol li a,
div.toolbar li.pagination ol li a {
    display: block;
    float: left;
    padding: 0 5px;
}

div.my-account li.pagination ol li.current,
div.toolbar li.pagination ol li.current {
    display: block;
    padding: 0 5px;
}

div.my-account ol.pager,
div.toolbar li.sort-by {
    float: right;
}

div.toolbar li.sort-by label,
div.toolbar li.sort-by select,
div.toolbar li.sort-by a {
    float: left;
    margin-left: 5px;
}

div.toolbar li.sort-by a {
    margin-top: 4px;
}

/* ----------------------------- PRODUCTS GRID */

ul.products-grid {
    overflow: hidden;
}

ul.products-grid li {
    list-style-type:none;
}

ul.products-grid li.hproduct {
    border-right: 1px dotted;
    border-bottom: 1px dotted;
    float: left;
    list-style-type: none;
    padding: 20px 19px 19px 20px; /* 19px makes up for 1px border */
    width:200px;
}

ul.products-grid li.hproduct.last {
    border-right: 0px;
}

ul.products-grid.last li.hproduct {
    border-bottom: 0px;
}

ul.list-products li.hproduct {
    width:auto;
}

ul.products-grid.list-products li.hproduct h2.product-name {
    min-height:0;
    margin-top:0;
}

/* 2 column, grid layout, 3 products across */

div.col2-left-layout div.col-main ul.products-grid li,
div.col2-right-layout div.col-main ul.products-grid li {
    width: 200px;
}

div.col2-left-layout div.col-main ul.products-grid li:nth-child(3n),
div.col2-right-layout div.col-main ul.products-grid li:nth-child(3n) {
    border-right: none;
    padding-right: 20px;
}

/* 9 product list */

div.col2-left-layout div.col-main ul.products-grid li:nth-child(n+7),
div.col2-right-layout div.col-main ul.products-grid li:nth-child(n+7) {
    border-bottom: none;
    padding-bottom: 20px;
}

ul.products-grid li h2.product-name {
    min-height: 75px;
    margin-top: 20px;
}

ul.products-grid li h2.current-price {
    margin-top: 25px;
    padding-bottom: 0;
}

ul.products-grid li h3.original-price + h2.current-price {
    margin-top: 0;
}

ul.products-grid li p.price-from,
ul.products-grid li p.price-to,
ul.products-grid li p.minimal-price,
ul.products-grid li a.minimal-price-link,
ul.products-grid li h2.current-price,
ul.products-grid li h3.original-price {
    clear: right;
    float: right;
    width: 110px;
}

ul.products-grid li a.minimal-price-link {
    float:right;
    width: 110px;
}

ul.products-grid li div.actions {
    margin-top: 25px;
}

ul.products-grid li div.price-box + div.actions {
    margin-top:100px;
}

ul.products-grid li div.actions button {
    margin: 0 auto;
    width: 60%;
}

ul.products-grid li ul.add-to-links {
    margin-top: 5px;
}

ul.products-grid li ul.add-to-links li,
div.col2-left-layout div.col-main ul.products-grid li ul.add-to-links li {
    border: none;
    float: none;
    padding: 0;
    text-align: center;
}

/* ----------------------------- PRODUCTS LIST */
/* (does inherit from products grid) */

div.col2-left-layout div.col-main ul.list-products li, 
div.col2-right-layout div.col-main ul.list-products li {
    width: 680px;
}
/* ... */

